# morphect

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  build_macos.sh
.github/workflows/: ci.yml
cmake/: MorphectConfig.cmake.in
config/: morphect_config.json
manual/: 00-introduction.md  01-building.md  02-quickstart.md  03-llvm-ir.md  04-gcc-plugin.md  05-assembly.md  05-techniques.md  06-configuration.md  06-techniques.md  07-architecture.md  07-configuration.md  08-api.md  08-architecture.md  09-api.md  09-troubleshooting.md  10-troubleshooting.md
src/: morphect.hpp
src/backends/assembly/: assembly_obfuscator.cpp
src/backends/gimple/: gimple_obf_plugin.cpp
src/backends/llvm_ir/: ir_obfuscator.cpp
src/common/: json_parser.hpp  logging.hpp  random.hpp
src/core/: pass_manager.hpp  statistics.hpp  transformation_base.hpp
src/passes/antidebug/: antidebug.cpp  antidebug.hpp  antidebug_base.hpp
src/passes/antidisasm/: antidisasm.cpp  antidisasm.hpp  antidisasm_base.hpp
src/passes/cff/: bogus_cf.hpp  cff.hpp  cff_base.hpp  gimple_cff.hpp  llvm_cff_transform.cpp  llvm_cfg_analyzer.cpp  opaque_predicates.hpp
src/passes/control_flow/: call_stack_obf.cpp  call_stack_obf.hpp  call_stack_obf_base.hpp  control_flow.hpp  indirect_branch.cpp  indirect_branch.hpp  indirect_branch_base.hpp  indirect_call.cpp  indirect_call.hpp  indirect_call_base.hpp
src/passes/data/: constant_obf.cpp  constant_obf.hpp  data.hpp  data_base.hpp  string_encoding.cpp  string_encoding.hpp  variable_splitting.cpp  variable_splitting.hpp
src/passes/deadcode/: dead_code.cpp  dead_code.hpp  dead_code_base.hpp  deadcode.hpp
src/passes/mba/: mba.hpp  mba_add.cpp  mba_add.hpp  mba_and.cpp  mba_and.hpp  mba_base.hpp  mba_mult.cpp  mba_mult.hpp  mba_or.cpp  mba_or.hpp  mba_pass.hpp  mba_sub.cpp  mba_sub.hpp  mba_xor.cpp  mba_xor.hpp
src/runtime/: string_decoder.c
tests/benchmarks/: bench_mba.cpp
tests/decompilation/: DecompileAllFunctions.java  analyze_obfuscation.py  ghidra_test.c  run_ghidra_test.sh
tests/fixtures/: obfuscation_fixture.hpp
tests/integration/: test_gimple.cpp  test_ir.cpp  test_obfuscation_verification.cpp  test_semantics.cpp
tests/programs/: simple_test.c
tests/regression/: test_regressions.cpp
tests/samples/: mba_ir_config.json  mba_test.c  test_assembly.c  test_gimple.c  test_llvm_ir.c
tests/unit/: simple_test.cpp  test_antidebug.cpp  test_antidisasm.cpp  test_assembly.cpp  test_cff.cpp  test_control_flow.cpp  test_coverage.cpp  test_data.cpp  test_deadcode.cpp  test_json.cpp  test_main.cpp  test_mba.cpp  test_random.cpp  test_statistics.cpp
